--- a/src/css/annotator.css
+++ b/src/css/annotator.css
@@ -17,19 +17,48 @@
   cursor: crosshair;
 }
 
+.btn-simple {
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
 .region {
   position: absolute;
 }
 
 .region-header {
+  display: flex;
+  flex-direction: row;
   width: 100%;
-  border: 1px solid #006079;
-  background-color: #006079;
+  padding: 0 4px;
+  color: #ffffff;
+  font-size: 12px;
+}
+
+.region-header--inactive {
+  border: 2px solid #00b1b9;
+  background-color: #00b1b9;
+}
+.region-header--active {
+  border: 2px solid #ff7600;
+  background-color: #ff7600;
+}
+
+.region-header span {
+  flex: auto;
 }
 
 .region-body {
   width: 100%;
-  border: 1px solid #006079;
+}
+
+.region-body--inactive {
+  border: 2px solid #00b1b9;
+}
+.region-body--active {
+  border: 2px solid #ff7600;
 }
 
 .controls {
@@ -43,13 +72,22 @@
 }
 
 .btn-play, .btn-play:enabled {
-  background-color: transparent;
-  border: 0;
   color: #000080;
   font-size: 40px;
-  margin: 0;
-  padding: 0;
 }
 .btn-play:hover {
   color: #006079;
+}
+
+.data {
+  display: flex;
+  flex-direction: row;
+}
+.data-active {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+}
+.data-all {
+  flex: 1;
 }
