--- a/src/css/annotator.css
+++ b/src/css/annotator.css
@@ -26,8 +26,6 @@ html {
 .btn-simple, .btn-simple:enabled {
   background-color: transparent;
   border: 0;
-  margin: 0;
-  padding: 0;
 }
 
 .toasty {
@@ -91,14 +89,31 @@ html {
 
 .workbench {
   position: relative;
-  height: 600px;
   background-color: #eeeeee;
+}
+
+.workbench-controls {
+  position: absolute;
+  top: 10px;
+  right: 50px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  font-size: 16px;
+}
+.workbench-controls > * {
+  display: inline-block;
+  padding: 5px;
+}
+
+.canvas-wrapper {
+  position: absolute;
+  right: 0;
+  overflow-x: scroll;
 }
 
 .canvas {
   display: block;
   position: absolute;
-  right: 0;
   cursor: crosshair;
 }
 
@@ -122,13 +137,17 @@ html {
   align-self: center;
 }
 
+.region-header > button {
+  padding: 0;
+}
+
 .region-body {
   width: 100%;
 }
 
 /* Controls */
 
-.controls > p {
+.annotator-controls > p {
   margin-bottom: 0;
 }
 
