feat(annotator): add axes for spectrogram (wip with demo values)

--- a/src/css/annotator.css
+++ b/src/css/annotator.css
@@ -117,6 +117,16 @@ html {
   cursor: crosshair;
 }
 
+.time-axis {
+  display: block;
+  position: absolute;
+}
+
+.freq-axis {
+  display: block;
+  position: absolute;
+}
+
 .region {
   position: absolute;
 }
