fix(annotator): tags for active annotation are properly displayed

--- a/src/css/annotator.css
+++ b/src/css/annotator.css
@@ -103,3 +103,9 @@ html {
   border: none;
   color: #000000;
 }
+
+.annotation-tags {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
