--- a/src/css/annotator.css
+++ b/src/css/annotator.css
@@ -4,10 +4,6 @@ html {
 
 /* Annotator */
 
-.annotator {
-  width: 97% !important;
-}
-
 .annotator-nav {
   display: flex;
   flex-direction: row;
@@ -88,6 +84,7 @@ html {
 /* Workbench */
 
 .workbench {
+  margin: 0 auto 10px;
   position: relative;
   background-color: #eeeeee;
 }
@@ -95,10 +92,10 @@ html {
 .workbench-controls {
   position: absolute;
   top: 10px;
-  right: 50px;
+  left: 300px;
   background-color: #ffffff;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 20px;
 }
 .workbench-controls > * {
   display: inline-block;
