--- a/src/css/annotator.css
+++ b/src/css/annotator.css
@@ -30,6 +30,63 @@ html {
   padding: 0;
 }
 
+.toasty {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  margin: auto 0 !important;
+  z-index: 1;
+  left: 0;
+  font-size: 17px;
+  white-space: nowrap;
+}
+
+.toasty > button {
+  float: right;
+  line-height: inherit;
+  vertical-align: middle;
+}
+
+.toasty-hidden {
+  visibility: hidden;
+}
+
+.toasty-showing {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s;
+  animation: fadein 0.5s;
+}
+
+.toasty-visible {
+  visibility: visible;
+}
+
+.toasty-hiding {
+  visibility: visible;
+  -webkit-animation: fadeout 0.5s;
+  animation: fadeout 0.5s;
+}
+
+@-webkit-keyframes fadein {
+  from { bottom: -30px; opacity: 0; }
+  to { bottom: 0; opacity: 1; }
+}
+
+@keyframes fadein {
+  from { bottom: -30px; opacity: 0; }
+  to { bottom: 0; opacity: 1; }
+}
+
+@-webkit-keyframes fadeout {
+  from  { bottom: 0; opacity: 1; }
+  to { bottom: 30px; opacity: 0; }
+}
+
+@keyframes fadeout {
+  from { bottom: 0; opacity: 1; }
+  to { bottom: 30px; opacity: 0; }
+}
+
 /* Workbench */
 
 .workbench {
