fix(annotator): better annotation styling and error handling after PR review

--- a/src/css/annotator.css
+++ b/src/css/annotator.css
@@ -119,6 +119,8 @@ html {
 .region-header > span {
   overflow-x: hidden;
   overflow-wrap: break-word;
+  align-self: center;
+  min-height: 18px;
 }
 
 .region-body {
